Fixed MIN_PLAYERS, simplified GAME_TYPES.